# mremote

./: .dockerignore  .gitignore  Dockerfile  README.md  README.orig.md  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  package.json.orig  vite.config.js
.github/workflows/: docker-publish.yml
scripts/: build-sidecar.mjs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/cli/: index.js
src/server/: auth.js  authRoutes.js  desktop.js  docker.js  editor.js  files.js  git.js  httpClient.js  index.js  logs.js  notify.js  process.js  proxy.js  pty.js  search.js  settings.js  snippets.js  ssh.js  system.js  tunnel.js  utils.js
src/ui/: index.html
src/ui/src/: App.jsx  api.js  main.jsx  styles.css
src/ui/src/components/: CodeMirror.jsx  Devices.jsx  Docker.jsx  Editor.jsx  FileExplorer.jsx  Git.jsx  Http.jsx  Logs.jsx  PairScreen.jsx  Search.jsx  (+13 more)
ui-dist/: index.html
ui-dist/assets/: index-B-K-Xses.js  index-B4TwkkEx.js  index-B72ykAcH.css  index-BI3U7BTI.css  index-BIukBYQR.js  index-BVgZWR5z.js  index-BXWD_8gG.css  index-BwOMxsb8.css  index-Bzt1Om-f.css  index-C1xpp_sX.js  index-C29ZuHfo.css  index-CBW7UWo6.js  index-CD8I-WLF.js  index-CWKXqLx4.js  index-CjxoDPI7.js  index-Coe_0yZg.js  index-CpcEH2dR.js  index-CumrBrRo.js  index-CxkaHknc.js  index-DHoUcx80.js  index-DRk_2KKO.js  index-DXQXdwNR.js  index-DXeCZTBY.css  index-DeSTEpKq.js  index-DgMrG_zC.js  index-DiHBHcf3.css  index-DjDhq5Dv.js  index-Djlqj2Mr.js  index-Du4f6QqH.css  index-V3U07IhV.js  index-m1SFeQP5.js
