[package]
name = "m-termius"
version = "0.5.0"
description = "M-Termius desktop"
authors = ["M-Termius"]
license = "MIT"
edition = "2021"
rust-version = "1.77"

[lib]
name = "m_termius_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
